# comandas_app

frontend/: .env.example  .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html  tailwind.config.js
frontend/src/: app.rs  main.rs
frontend/src/components/: mod.rs
frontend/src/components/common/: action_buttons.rs  cliente_filters.rs  comanda_filters.rs  comanda_validator.rs  funcionario_filters.rs  mod.rs  navbar.rs  page_layout.rs  pagination.rs  produto_filters.rs  snackbar.rs  user_profile.rs
frontend/src/components/forms/: controlled_input.rs  login_form.rs  mod.rs
frontend/src/components/routes/: mod.rs  restricted_route.rs
frontend/src/constants/: comanda_status.rs  mod.rs
frontend/src/context/: auth.rs
frontend/src/hooks/: masks.rs  mod.rs  validation.rs
frontend/src/pages/: caixa_dashboard.rs  cliente_form.rs  cliente_list.rs  comanda_consumo_form.rs  comanda_form.rs  comanda_list.rs  dashboard.rs  funcionario_form.rs  funcionario_list.rs  mod.rs  not_found.rs  produto_form.rs  produto_list.rs  produto_list_public.rs  recebimento_comprovante.rs  recebimento_form.rs  recebimento_list.rs
frontend/src/routes/: mod.rs  private_route.rs  restricted_route.rs  router.rs
frontend/src/services/: api.rs  auth_service.rs  caixa_service.rs  cliente_service.rs  comanda_service.rs  funcionario_service.rs  mod.rs  produto_service.rs
frontend/src/shared/: validation.rs
frontend/src/style/: tailwind.css
frontend/src/utils/: api_config.rs  config.rs  mod.rs  snackbar.rs  user_groups.rs
frontend/style/: tailwind.css
