[package]
name = "comandas_app"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.15", features = ["csr"] }
leptos_icons = "0.7.1"
leptos_router = "0.8.13"
web-sys = { version = "0.3.85", features = ["Window", "Storage", "CustomEvent", "EventTarget"] }
thaw = "0.4.8"
validator = { version = "0.20.0", features = ["derive"] }
icondata = "0.7.0"
wasm-bindgen = "0.2.121"

[package.metadata.leptos]
tailwind-input-file = "src/style/tailwind.css"
